--- a/2080600373_PhanThanhAnhHuy/2080600373_PhanThanhAnhHuy.csproj
+++ b/2080600373_PhanThanhAnhHuy/2080600373_PhanThanhAnhHuy.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\202303131233035_PopulateCategoryTable.designer.cs">
       <DependentUpon>202303131233035_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202303220751053_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202303220751053_AddNameColumnToApplicationUser.designer.cs">
+      <DependentUpon>202303220751053_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -197,6 +201,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
+    <Compile Include="ViewModels\CustomViewModel.cs" />
+    <Compile Include="ViewModels\FutureDate.cs" />
+    <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -281,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202303131233035_PopulateCategoryTable.resx">
       <DependentUpon>202303131233035_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303220751053_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202303220751053_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
